# local-webserver-mcp

./: .gitignore  CHANGELOG.md  DESIGN_REPORT.md  README.md  mcp.json  pyproject.toml  run_server.py  run_web_config.py  test_tools.py  web_config.py
src/mcp_web_server/: __init__.py  config.py  http_client.py  models.py  server.py
src/mcp_web_server/tools/: __init__.py  common.py  extract.py  http.py  screenshot.py  search.py
src/mcp_web_server/utils/: __init__.py  rate_limit.py  validation.py
tests/: conftest.py  test_batch_http_request.py  test_extract_webpage.py  test_fetch_json.py  test_http_client.py  test_http_request.py  test_rate_limiter.py  test_run_server_input_guard.py  test_task_2_1_error_handling.py  test_validation.py  test_web_search.py  test_web_search_and_extract.py
